feat: Sistema completo de opciones de ayuda con detección automática de pedidos web
✨ Nuevas características:
- Sistema de opciones de ayuda (2, 3, 4, 5) con videos tutoriales
- Detección automática de pedidos web con prioridad máxima
- Gestión inteligente de timers y recordatorios
- Cancelación automática de timeouts al recibir respuesta del usuario
- Sistema de refuerzo con segundo video explicativo
- Integración con Google Cloud Vision API para verificación de pagos
- Soporte para OpenAI API (opcional)

🔧 Mejoras técnicas:
- Timer único activo por usuario con cancelación garantizada
- Detección prioritaria de pedidos antes que cualquier otro flujo
- Reseteo automático de banderas al recibir pedido web
- Sistema de recordatorios de pago inteligente (1, 3 y 5 minutos)
- Protección contra mensajes duplicados
- Delays inteligentes basados en actividad del usuario (8s base, 12s múltiples)

📋 Flujo de opciones:
- Opción 2: Ayuda para problemas al enviar pedido
- Opción 3: Tutorial de múltiples pedidos
- Opción 4: Verificación de cobertura de entrega
- Opción 5: Hacer pedido directo

🎯 Gestión post-pedido:
- Confirmación automática de recepción
- Detección de método de pago (Efectivo, Nequi, Daviplata, Bancolombia)
- Recordatorios de pago solo para métodos digitales
- Sin videos ni menús después de recibir el pedido
- Flujo enfocado en pago y entrega

🐳 Infraestructura:
- Dockerfile para containerización
- Configuración de variables de entorno mejorada
- Documentación completa del flujo en README.md
- Soporte para WhatsApp Cloud API (webhook)

📚 Documentación:
- Informe completo del flujo del bot
- Tabla de estados y transiciones
- Garantías del sistema
- Código de ejemplo de mecanismos técnicos

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,39 @@ NODE_ENV=development
 PORT=5000
 JWT_SECRET=tu_super_secreto_seguro
 DB_TYPE=firestore
-GOOGLE_APPLICATION_CREDENTIALS=./firebase-credentials.json
+GOOGLE_APPLICATION_CREDENTIALS=C:\Users\juand\BOT-SERVI\credenciales-firebase.json
 # DB_TYPE=mongodb
 # MONGO_URI=mongodb://localhost:27017/servi
 # DB_TYPE=postgresql
 # PG_CONNECTION=postgresql://user:password@localhost:5432/servi
+
+# Número del administrador (opcional, para notificaciones)
+ADMIN_PHONE_NUMBER=3142749518
+
+# Modo seguro del bot: solo responde a mensajes entrantes (no campañas)
+SAFE_REPLY_ONLY=true
+BOT_MAX_MESSAGES_PER_MINUTE=20
+BOT_MIN_DELAY_MS=400
+BOT_MAX_DELAY_MS=1200
+
+# Proveedor de WhatsApp: 'web' (whatsapp-web.js) o 'cloud' (Business Cloud API)
+WHATSAPP_PROVIDER=web
+
+# Configuración WhatsApp Business Cloud API (requerido si WHATSAPP_PROVIDER=cloud)
+# Versión del Graph API
+WA_CLOUD_API_VERSION=v20.0
+# ID del número de teléfono (PHONE_NUMBER_ID)
+WA_CLOUD_PHONE_ID=
+# Access Token de la app (debe ser a largo plazo en producción)
+WA_CLOUD_ACCESS_TOKEN=
+# Verify Token para la verificación del webhook
+WA_CLOUD_VERIFY_TOKEN=
+# Opcional: Business ID
+WA_CLOUD_BUSINESS_ID=
+
+# OpenAI API Key para funciones de IA (no compartas tu clave real)
+OPENAI_API_KEY=
+# Número máximo de llamadas IA por conversación
+AI_MAX_CALLS_PER_CONVO=12
+# TTL de caché en milisegundos para respuestas IA repetidas
+AI_CACHE_TTL_MS=45000
