--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fastify/rate-limit": "^7.0.0",
     "@fastify/swagger": "^8.0.0",
     "@fastify/swagger-ui": "^4.2.0",
+    "@google-cloud/vision": "^5.3.4",
     "chalk": "^5.4.1",
     "convict": "^6.0.0",
     "dotenv": "^16.0.0",
@@ -27,11 +28,13 @@
     "mongoose": "^6.0.0",
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
+    "openai": "^4.67.1",
     "pg": "^8.0.0",
     "puppeteer": "^24.4.0",
     "qrcode-terminal": "^0.12.0",
     "sanitize-html": "^2.0.0",
     "string-similarity": "^4.0.4",
+    "whatsapp-web.js": "^1.34.2",
     "winston": "^3.17.0"
   },
   "devDependencies": {
